// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при применении промокода при не успехе не будет запрашивать все промокоды и отправит корректную метрику 1`] = `
Array [
  Array [
    Array [
      "promocode",
      "page",
      "view",
    ],
  ],
  Array [
    Array [
      "promocode",
      "page",
      "click",
    ],
  ],
  Array [
    Array [
      "promocode",
      "page",
      "activate-fail",
    ],
  ],
]
`;

exports[`при применении промокода при успехе запросит все промокоды и отправит корректную метрику 1`] = `
Array [
  Object {
    "message": "Промокод активирован 👌",
    "view": "success",
  },
]
`;

exports[`при применении промокода при успехе запросит все промокоды и отправит корректную метрику 2`] = `
Array [
  Array [
    Array [
      "promocode",
      "page",
      "view",
    ],
  ],
  Array [
    Array [
      "promocode",
      "page",
      "click",
    ],
  ],
  Array [
    Array [
      "promocode",
      "page",
      "activate-success",
      "placement",
    ],
  ],
]
`;
